[translate] clean up some loose ends