@@ -6,11 +6,13 @@
 package de.chojo.repbot.core;
 
 import de.chojo.repbot.util.LogNotify;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.ThreadFactory;
 
 import static org.slf4j.LoggerFactory.getLogger;
@@ -18,20 +20,22 @@ import static org.slf4j.LoggerFactory.getLogger;
 public class Threading {
     private static final Logger log = getLogger(Threading.class);
     private static final Thread.UncaughtExceptionHandler EXCEPTION_HANDLER =
-            (t, e) -> log.error(LogNotify.NOTIFY_ADMIN, "An uncaught exception occured in " + t.getName() + "-" + t.getId() + ".", e);
+            (t, e) -> log.error(LogNotify.NOTIFY_ADMIN, "An uncaught exception occurred in {}-{}.", t.getName(), t.threadId(), e);
     private final ThreadGroup eventGroup = new ThreadGroup("Event Worker");
     private final ThreadGroup workerGroup = new ThreadGroup("Scheduled Worker");
     private final ThreadGroup hikariGroup = new ThreadGroup("Hikari Worker");
     private final ThreadGroup jdaGroup = new ThreadGroup("JDA Worker");
-    private final ExecutorService eventThreads = Executors.newFixedThreadPool(20, createThreadFactory(eventGroup));
-    private final ScheduledExecutorService repBotWorker = Executors.newScheduledThreadPool(3, createThreadFactory(workerGroup));
+    private final ExecutorService eventThreads = Executors.newVirtualThreadPerTaskExecutor();
+    private final ScheduledExecutorService repBotWorker = new Executor(1, Thread.ofVirtual().uncaughtExceptionHandler(EXCEPTION_HANDLER).factory());
 
     public static ThreadFactory createThreadFactory(ThreadGroup group) {
-        return r -> {
-            var thread = new Thread(group, r, group.getName());
-            thread.setUncaughtExceptionHandler(EXCEPTION_HANDLER);
-            return thread;
-        };
+        return r -> new Thread(group, () -> {
+            try {
+                r.run();
+            } catch (Throwable e) {
+                log.error("An uncaught exception occurred in {}-{}.", Thread.currentThread().getName(), Thread.currentThread().threadId(), e);
+            }
+        }, group.getName());
     }
 
     public ThreadGroup eventGroup() {
@@ -60,5 +64,19 @@ public class Threading {
 
     public void shutdown() {
         repBotWorker.shutdown();
+    }
+
+    private static class Executor extends ScheduledThreadPoolExecutor{
+
+        public Executor(int corePoolSize, @NotNull ThreadFactory threadFactory) {
+            super(corePoolSize, threadFactory);
+        }
+
+        @Override
+        protected void afterExecute(Runnable r, Throwable t) {
+            if(t != null){
+                log.error("An uncaught exception occurred.", t);
+            }
+        }
     }
 }
